--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="grayOne">#4d4c4c</color>
     <color name="grayOTwo">#535353</color>
     <color name="grayThree">#8f8e8e</color>
+    <color name="grayFour">#DFDBDB</color>
 
 </resources>
