--- a/app/src/main/res/layout/forgot_password_layout.xml
+++ b/app/src/main/res/layout/forgot_password_layout.xml
@@ -43,8 +43,8 @@
 
     <View
         android:id="@+id/oval_container"
-        android:layout_width="250dp"
-        android:layout_height="120dp"
+        android:layout_width="284dp"
+        android:layout_height="142dp"
         android:layout_marginTop="272dp"
         android:background="@drawable/background_white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,10 +58,10 @@
         android:layout_height="43dp"
 
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="400dp"
+        android:layout_marginBottom="350dp"
         android:backgroundTint="#feb06a"
         android:hapticFeedbackEnabled="false"
-        android:onClick="resetButtonOnclick"
+        android:onClick="onClick"
         android:text="RESET PASSWORD"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
