--- a/app/src/main/res/layout/fragment_workingplace.xml
+++ b/app/src/main/res/layout/fragment_workingplace.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mycards.MyCardFragment">
+    tools:context=".ui.mycards.MyCardFragment"
+    android:background="@color/purpleFirst">
 
     <TextView
         android:id="@+id/text_gallery"
